log
Sat Apr  9 21:30:43 HSP 2022: 
 tests:  0|6
total_score: 0/70
0ad1bf2
Sun Apr 10 18:48:54 HSP 2022: 
 tests:  0|6
total_score: 0/70
24732a8
Sun Apr 10 18:49:34 HSP 2022: 
 tests:  0|6
total_score: 0/70
a2c111d
Sun Apr 10 18:50:13 HSP 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
d0f83f4
Sun Apr 10 19:27:15 HSP 2022: 
 tests:  1|5
total_score: 10/70
8aef015
Sun Apr 10 19:31:17 HSP 2022: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8b5fc6d
Sun Apr 10 19:31:23 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
05734e4
Sun Apr 10 19:31:32 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
809d712
Sun Apr 10 19:31:40 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
85ea26e
Sun Apr 10 19:32:13 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ade5ce4
Sun Apr 10 19:32:22 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3334ef8
Sun Apr 10 19:32:27 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bae6faa
Sun Apr 10 19:32:42 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e2c581a
Sun Apr 10 19:33:07 HSP 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
b0dadfa
Sun Apr 10 19:33:40 HSP 2022: 
 tests:  0|0
9beacb4
Sun Apr 10 19:36:53 HSP 2022: 
 tests:  0|0
5d20661
Sun Apr 10 19:37:06 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3abb52f
Sun Apr 10 19:52:18 HSP 2022: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
08ea6b1
Sun Apr 10 19:53:05 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
07787e1
Sun Apr 10 20:25:17 HSP 2022: 
 hashmap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  0|0
6742473
Sun Apr 10 20:25:38 HSP 2022: 
 tests:  0|0
ad23794
Sun Apr 10 20:34:19 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb4da87
Sun Apr 10 20:52:18 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
27d3a41
Sun Apr 10 21:15:05 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ea3ada2
Sun Apr 10 21:25:17 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
191603c
